crates/hir-ty/tests/snapshots/jls_source_level__records_at_15_is_reported.snap
---
source: crates/hir-ty/tests/jls_source_level.rs
expression: out
---
FILE /src/com/example/Records.java:
package com.example;

record A(int x) {}

@2:0: feature-not-supported-in-source-level: records are not supported in -source 15 (use -source 16 or higher to enable records)
