crates/hir-ty/tests/snapshots/jls_source_level__reifiable_instanceof_at_15_is_reported.snap
---
source: crates/hir-ty/tests/jls_source_level.rs
expression: out
---
FILE /src/com/example/ReifiableInstanceof.java:
package com.example;

class A {
    boolean m(Object o) {
        return o instanceof java.util.List<String>;
    }
}

@4:15: feature-not-supported-in-source-level: reifiable types in instanceof are not supported in source level 15 (use source level 16 or higher to enable reifiable types in instanceof)
