crates/hir-ty/tests/snapshots/jls_source_level__reifiable_instanceof_at_16_is_legal.snap
---
source: crates/hir-ty/tests/jls_source_level.rs
expression: out
---
FILE /src/com/example/ReifiableInstanceof.java:
package com.example;

class A {
    boolean m(Object o) {
        return o instanceof java.util.List<String>;
    }
}
