crates/hir-ty/tests/snapshots/jls_source_level__reloading_at_a_higher_level_clears_the_report.snap
---
source: crates/hir-ty/tests/jls_source_level.rs
expression: out
---
--- at -source 15
FILE /src/com/example/Records.java:
package com.example;

record A(int x) {}

@2:0: feature-not-supported-in-source-level: records are not supported in source level 15 (use source level 16 or higher to enable records)
--- at -source 16
FILE /src/com/example/Records.java:
package com.example;

record A(int x) {}
