crates/hir-ty/tests/snapshots/jls_source_level__reloading_at_a_lower_level_adds_the_report.snap
---
source: crates/hir-ty/tests/jls_source_level.rs
expression: out
---
--- at -source 16
FILE /src/com/example/Records.java:
package com.example;

record A(int x) {}

--- at -source 15
FILE /src/com/example/Records.java:
package com.example;

record A(int x) {}

@2:0: feature-not-supported-in-source-level: records are not supported in -source 15 (use -source 16 or higher to enable records)
