crates/hir-ty/tests/snapshots/jls_source_level__sealed_at_17_is_legal.snap
---
source: crates/hir-ty/tests/jls_source_level.rs
expression: out
---
FILE /src/com/example/Sealed.java:
package com.example;

sealed interface Shape permits Circle {
}

final class Circle implements Shape {
}

non-sealed class Free implements Shape {
}
