crates/hir-ty/tests/snapshots/jls_source_level__switch_expressions_at_14_are_legal.snap
---
source: crates/hir-ty/tests/jls_source_level.rs
expression: out
---
FILE /src/com/example/SwitchExpr.java:
package com.example;

class A {
    int m(int i) {
        return switch (i) {
            case 1 -> 1;
            default -> 2;
        };
    }
}
