crates/hir-ty/tests/snapshots/jls_source_level__switch_rules_at_13_are_reported.snap
---
source: crates/hir-ty/tests/jls_source_level.rs
expression: out
---
FILE /src/com/example/SwitchRules.java:
package com.example;

class A {
    void m(int i) {
        switch (i) {
            case 1, 2 -> {}
            default -> {}
        }
    }
}

@5:12: feature-not-supported-in-source-level: switch rules are not supported in source level 13 (use source level 14 or higher to enable switch rules)
@6:12: feature-not-supported-in-source-level: switch rules are not supported in source level 13 (use source level 14 or higher to enable switch rules)
