crates/hir-ty/tests/snapshots/jls_source_level__switch_rules_at_14_are_legal.snap
---
source: crates/hir-ty/tests/jls_source_level.rs
expression: out
---
FILE /src/com/example/SwitchRules.java:
package com.example;

class A {
    void m(int i) {
        switch (i) {
            case 1, 2 -> {}
            default -> {}
        }
    }
}
